--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^9.0",
         "laravel/tinker": "^2.6",
         "livewire/livewire": "^2.8",
+        "spatie/laravel-permission": "^5.5",
         "tightenco/ziggy": "^1.4"
     },
     "require-dev": {
