--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/tinker": "^2.6",
         "livewire/livewire": "^2.8",
         "spatie/laravel-permission": "^5.5",
-        "tightenco/ziggy": "^1.4"
+        "tightenco/ziggy": "^1.4",
+        "yoeunes/toastr": "^2.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
